 - Many string references and const char pointers are now `std::string_view`.
 - The `stream_base` abstract base class is gone.
 - Transactions no longer have an `isolation_tag` nested type.
 - The `isolation_traits` type is gone.
 - There's no more `pqxx_exception`.  Complicated things too much.
 - `pqxx::string_traits<>::name()` has been replaced with `pqxx::type_name`.
 - All `from_string()` that took a C string now take a `std::string_view`.
 - There are now separate `string_traits` and `null_traits` templates.
 - Enums outside classes are now scoped enums.
 - `error_verbosity` is no longer nested in connection.
 - `connection::get_verbosity` is gone.
 - Some enums have changed names: `accesspolicy` to `access_policy`, and so on.
 - `dynamic_params` now takes an accessor.
 - Fixed "const" support in arguments to parameterised/prepared statements.
 - Connection objects can now be moved.
 - `connections::options()` is gone.
 - Replaced pqxx-fulltest with `test_all.py`.
 - Some `size_type` have changed to different types, to match current libpq.
 - Internal overflows are more consistently caught and reported.
 - Items marked "deprecated" have been removed.
 - win32/libpqxx.cxx and DllMain did not seem to be needed, so they're gone.
 - Large objects now require backend version 9.3 or better.
 - Seeking inside large objects now supports 64-bit sizes.
 - Visual Studio project files and sample headers are gone.  Use CMake.
 - MinGW Makefiles are gone.  Use `configure` or CMake.
6.4.4
 - Use pkg-config if pg-config is not available.
 - In CMake build, prefer CMake's config headers over any found in source tree.
6.4.3
 - Updated copyright strings.
 - Added missing "stream" headers to autotools-based install.
 - Added stream headers to pqxx/pqxx header.
6.4.2
 - Fix mistake for Windows in 6.4.1: use PQfreemem, not std::free.
 - Easily enable runtime checks in configure: "--enable-audit".
 - Enable optimisation in CircleCI build.
6.4.1
 - Fixed more memory leaks.
6.4.0